--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+@charset "utf-8";
 body {
 	color: blue;
 }
@@ -6,7 +7,7 @@ nav {
 	background-color: #E9937F;
 }
 
-ul {
+li {
 	display: inline;
 }
 
